--- a/heiyu-mall/src/main/resources/application.properties
+++ b/heiyu-mall/src/main/resources/application.properties
@@ -4,6 +4,6 @@ spring.datasource.name=imooc_mall_datasource
 spring.datasource.url=jdbc:mysql://127.0.0.1:3306/imooc_mall?useUnicode=true&characterEncoding=utf8&autoReconnect=true&useSSL=false&serverTimezone=Asia/Shanghai
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.username=root
-spring.datasource.password=dp!234
+spring.datasource.password=toor
 
 mybatis.mapper-locations=classpath:mappers/*.xml
