二维码接口开发

--- a/heiyu-mall/pom.xml
+++ b/heiyu-mall/pom.xml
@@ -75,6 +75,12 @@
             <artifactId>spring-boot-starter-cache</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>com.google.zxing</groupId>
+            <artifactId>javase</artifactId>
+            <version>3.3.0</version>
+        </dependency>
+
     </dependencies>
 
     <build>
