--- a/heiyu-mall/pom.xml
+++ b/heiyu-mall/pom.xml
@@ -80,6 +80,11 @@
             <artifactId>javase</artifactId>
             <version>3.3.0</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-mail</artifactId>
+            <version>2.3.4.RELEASE</version>
+        </dependency>
 
     </dependencies>
 
