--- a/heiyu-mall/pom.xml
+++ b/heiyu-mall/pom.xml
@@ -85,6 +85,11 @@
             <artifactId>spring-boot-starter-mail</artifactId>
             <version>2.3.4.RELEASE</version>
         </dependency>
+        <dependency>
+            <groupId>org.redisson</groupId>
+            <artifactId>redisson</artifactId>
+            <version>3.13.6</version>
+        </dependency>
 
     </dependencies>
 
