--- a/heiyu-mall/pom.xml
+++ b/heiyu-mall/pom.xml
@@ -90,6 +90,11 @@
             <artifactId>redisson</artifactId>
             <version>3.13.6</version>
         </dependency>
+        <dependency>
+            <groupId>com.auth0</groupId>
+            <artifactId>java-jwt</artifactId>
+            <version>3.14.0</version>
+        </dependency>
 
     </dependencies>
 
