--- a/heiyu-mall/pom.xml
+++ b/heiyu-mall/pom.xml
@@ -95,6 +95,16 @@
             <artifactId>java-jwt</artifactId>
             <version>3.14.0</version>
         </dependency>
+        <dependency>
+        <groupId>org.apache.poi</groupId>
+        <artifactId>poi</artifactId>
+        <version>3.16</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.poi</groupId>
+            <artifactId>poi-ooxml</artifactId>
+            <version>3.16</version>
+        </dependency>
 
     </dependencies>
 
