--- a/heiyu-mall/pom.xml
+++ b/heiyu-mall/pom.xml
@@ -105,6 +105,11 @@
             <artifactId>poi-ooxml</artifactId>
             <version>3.16</version>
         </dependency>
+        <dependency>
+            <groupId>net.coobird</groupId>
+            <artifactId>thumbnailator</artifactId>
+            <version>0.4.14</version>
+        </dependency>
 
     </dependencies>
 
